objects/project_cloud__Work_Type__c.object
<CustomObject>
    <fields>
        <fullName>ccpe_r__Default_Skill_Cost__c</fullName>
        <label>Default Skill Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpe_r__Default_Skill_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default Skill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Skill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <validationRules>
        <fullName>project_cloud__Work_Type_Name_Unique</fullName>
        <active>true</active>
        <description>Enforce the uniqueness of work type names</description>
        <errorConditionFormula>LOWER(Name) = LOWER(VLOOKUP($ObjectType.project_cloud__Work_Type__c.Fields.Name, $ObjectType.project_cloud__Work_Type__c.Fields.Name, Name)) &amp;&amp;
Id &lt;&gt; VLOOKUP($ObjectType.project_cloud__Work_Type__c.Fields.Id, $ObjectType.project_cloud__Work_Type__c.Fields.Name, Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Work Types must be unique</errorMessage>
    </validationRules>
</CustomObject>